c4prj2_input/grade.txt
Grading at Wed Mar 10 09:43:47 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:41:21: error: ‘future_cards_t {aka struct future_cards_tag}’ has no member named ‘deck’
        print_card(fc->deck[i].cards[j]);
                     ^
Compilation of future.c failed

Overall Grade: F
